# hardware-backend

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  database.py  hello.py  main.py  pyproject.toml  start_server.sh  test_db.py
db/: crud.py  database.py  schemas.py
router/: crud.py
routers/: analysis.py  conversation.py
src/: main.py
src/alg/: analyze_character.py  analyze_day.py  format_conversation.py
src/alg/ai_search/: ai_search_main.py  ai_search_support.py  prepare_docs.py
src/alg/analyze/: analysis.py  analyze_character.py  analyze_day.py  character.py  format_conversation.py  mental.py  rag.py  word_cloud.py
src/alg/analyze/prompt/: analyze_character_prompt.py  analyze_life_prompt.py  analyze_mental_prompt.py  analyze_word_cloud_prompt.py  rag_prompt.py
src/alg/prompt/: analyze_character_prompt.py  analyze_day_prompt.py
src/db/: create_tables.py  crud.py  database.py  models.py  schemas.py  settings.py
src/db/crud/: analysis.py  character.py  conversation.py  mental.py  word_cloud.py
src/routers/: analysis.py  character.py  conversation.py  mental.py  search.py  word_cloud.py
src/schema/: analysis.py  character.py  mental.py  word_cloud.py
src/utils/: get_day_timestamp_start_n_end.py  json_utils.py  openai_call.py  settings.py
